[package]

name = "conduit-compress"
version = "0.0.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]

[[lib]]

name = "conduit-compress"
path = "src/lib.rs"

[dependencies.conduit]

git = "https://github.com/conduit-rust/conduit.git"

[dependencies.conduit-middleware]

git = "https://github.com/conduit-rust/conduit-middleware.git"

[dependencies.flate2]

git = "https://github.com/alexcrichton/flate2-rs.git"

